# geolens

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
claude_state/: 2024.10.24.1629.xml  README.md
migrations/: env.py
migrations/versions/: 001_initial.py
scripts/: load_sample_data.py  print_db_config.py  sample_queries.sql
services/cloudbeaver/: data-sources.json
services/postgres/: init_master.sh
src/geolens/: cli.py  config.py
src/geolens/database/: engine.py  init.py  models.py  operations.py  types.py
src/geolens/services/: database.py  embeddings.py
tests/: conftest.py  test_database_service.py
